<resources>
    <string name="app_name">MyLiveTracker</string>
    <string name="txIsProFeature">This feature is available only in the PRO version of MyLiveTracker!</string>
    <string name="welcomeMessage">Welcome to %1$s. If you have questions or need support, please visit our forum at http://forum.mylivetracker.info!</string>
    <string name="prefsUpdated">Please verify your preferences, because they have been updated to version %1$s.</string>
    <string name="prefsReset">Your preferences have been reset, because they could not be updated to version %1$s.</string>
    <string name="tiPinCodeQuery">PIN Code</string>
    <string name="lbPinCodeQuery_PinCodeQueryInfo">Please enter PIN Code:</string>
    <string name="btSave">Save</string>
    <string name="btBack">Back</string>
    <string name="btCancel">Cancel</string>
    <string name="btOk">Ok</string>
    <string name="btYes">Yes</string>
    <string name="btNo">No</string>
    <string name="btContinue">Continue</string>
    <string name="btSend">Send</string>
    <string name="tvOn">On</string>
    <string name="tvOff">Off</string>
    <string name="txErr_NoDataConnection">No data connection could be established!</string>
    <string name="nfAppWaiting">waiting...</string>
    <string name="nfTrackRunning">Track is running.</string>
    <string name="nfListenerRunning">Location Listener and/or ANT+ Listener is running.</string>
    <string name="mnCatTracking">Tracking</string>
    <string name="mnPrefsLocalization">Localization</string>
    <string name="mnPrefsServer">Server</string>
    <string name="mnPrefsAccount">Account</string>
    <string name="mnTrackExport">Export</string>
    <string name="mnCatConnectTo">Connect</string>
    <string name="mnConnectToMyLiveTrackerPortal">MyLiveTracker</string>
    <string name="mnConnectToDropbox">Dropbox</string>
    <string name="mnCatSystem">System</string>
    <string name="mnPrefsPinCodeQuery">PIN code query</string>
    <string name="mnPrefsAuto">Auto</string>
    <string name="mnPrefsRemoteAccess">Remote access</string>
    <string name="mnPrefsHttpProtocolParams">HTTP Parameters</string>
    <string name="mnPrefsOther">Other</string>
    <string name="mnCatInfoAndExit">Info &amp; Exit</string>
    <string name="mnInfo">Info</string>
    <string name="mnExit">Exit</string>
    <string name="lbDropbox_UploadInProgress">Uploading...</string>
    <string name="lbDropbox_UploadDone">Upload successfully done!</string>
    <string name="lbDropbox_UploadCanceled">Upload canceled!</string>
    <string name="lbDropbox_UploadRejected">Upload rejected:</string>
    <string name="lbDropbox_AuthFailed">Authentication failed! Check the connection to Dropbox!</string>
    <string name="lbDropbox_FileTooLargeToUpload">File is too large to upload via this API!</string>
    <string name="lbDropbox_NetworkError">Network error! Try to upload again!</string>
    <string name="lbDropbox_DropboxError">Dropbox error! Try to upload again!</string>
    <string name="lbDropbox_UnknownError">Unknown error! Try to upload again!</string>
    <string name="antPlus_NotSupported">ANT+ not supported!</string>
    <string name="antPlus_InstallInfo">You must install the ANT+ radio service to interface to the ANT+ hardware!</string>
    <string name="antPlus_InitError">ANT+ initialization error!</string>
    <string name="antPlus_InUse">ANT+ radio service in use!</string>
    <string name="antPlus_Disabled">ANT+ radio service disabled!</string>
    <string name="antPlus_NotInstalled">ANT+ radio service not installed!</string>
    <string name="antPlus_Suspended">ANT+ connection suspended!</string>
    <string name="antPlus_ConnStateIdle">idle</string>
    <string name="antPlus_ConnStateConnecting">connecting</string>
    <string name="antPlus_ConnStateConnected">connected</string>
    <string name="antPlus_ConnStateDisconnecting">disconnecting</string>
    <string name="antPlus_ConnStateSearching">searching</string>
    <string name="antPlus_CountSensorListeners">%d listeners</string>
    <string name="locListener_Listening">searching</string>
    <string name="locListener_ProviderNotAvailable">N.A.</string>
    <string name="txMain_UploadResultOk">OK</string>
    <string name="txMain_UploadResultFailed">FLD</string>
    <string name="txMain_UploadResultInvalid">INV</string>
    <string name="txMain_UploadResultError">ERR</string>
    <string name="txMain_UploadResultMltError">MRR</string>
    <string name="tiMain">Track</string>
    <string name="tvMain_AutoStartIndicator">A.Start</string>
    <string name="tvMain_AutoModeIndicator">A.Mode</string>
    <string name="tvMain_LocalizationIndicator">Pos</string>
    <string name="tvMain_WirelessLanIndicator">WLAN</string>
    <string name="tvMain_MobileNetworkIndicator">Data</string>
    <string name="btMain_LocationListener">Localization</string>
    <string name="btMain_Tracking">Tracking</string>
    <string name="btMain_ResetTrack">Reset Track</string>
    <string name="btMain_AntPlus">ANT+</string>
    <string name="tvMain_Runtime">Runtime</string>
    <string name="tvMain_Distance">Distance</string>
    <string name="tvMain_Heartrate">Heartrate</string>
    <string name="tvMain_Location">Location</string>
    <string name="tvMain_Uploader">Uploader</string>
    <string name="txMain_QuestionStartLocalization">Do you really want to start localization?</string>
    <string name="txMain_QuestionStopLocalization">Do you really want to stop localization?</string>
    <string name="txMain_QuestionStartTrack">Do you really want to start the track?</string>
    <string name="txMain_QuestionStopTrack">Do you really want to stop the track?</string>
    <string name="txMain_InfoStartingTracking">Starting the track...</string>
    <string name="txMain_InfoStartTrackDone">Start track done!</string>
    <string name="txMain_InfoStoppingTracking">Stopping the track...</string>
    <string name="txMain_InfoStopTrackDone">Stop track done!</string>
    <string name="txMain_QuestionStartAntPlus">Do you really want to activate Ant+?</string>
    <string name="txMain_QuestionStopAntPlus">Do you really want to deactivate Ant+?</string>
    <string name="txMain_QuestionResetTrack">Do you really want to reset the track?</string>
    <string name="txMain_InfoResettingTracking">Resetting the track...</string>
    <string name="txMain_InfoResetTrackDone">Reset track done!</string>
    <string name="txMain_QuestionSendSosSignal">Do you really want to send a SOS signal?</string>
    <string name="txMain_InfoSendSosSignalDone">Send SOS signal done!</string>
    <string name="txMain_QuestionExit">Do you really want to exit MyLiveTracker?</string>
    <string name="txMain_InfoExitApp">MyLiveTracker is terminated...</string>
    <string name="tiMainDetails">Details</string>
    <string name="btMainDetails_SendSos">SOS</string>
    <string name="btMainDetails_SendMessage">Message</string>
    <string name="tvMainDetails_Uploader">Upl</string>
    <string name="tvMainDetails_UploaderCountUploaded">Count</string>
    <string name="tvMainDetails_UploaderRealInterval">Intv</string>
    <string name="tvMainDetails_UploaderAverageUploadTime">Utime</string>
    <string name="tvMainDetails_UploaderPositionsInBuffer">Buffer</string>
    <string name="tvMainDetails_Battery">Batt</string>
    <string name="tvMainDetails_BatteryStatus">Status</string>
    <string name="tvMainDetails_BatteryCharged">Charged</string>
    <string name="tvMainDetails_BatteryPower">Power</string>
    <string name="tvMainDetails_BatteryTemperature">Temp</string>
    <string name="tvMainDetails_MobileNetwork">MNw</string>
    <string name="tvMainDetails_MobileNetworkMCC">MCC</string>
    <string name="tvMainDetails_MobileNetworkMNC">MNC</string>
    <string name="tvMainDetails_MobileNetworkLAC">LAC</string>
    <string name="tvMainDetails_MobileNetworkCellId">Cell</string>
    <string name="tvMainDetails_Location">Loc</string>
    <string name="tvMainDetails_LocationSatCount">Sat</string>
    <string name="tvMainDetails_LocationAccuracy">Acc</string>
    <string name="tvMainDetails_LocationLatitude">Lat</string>
    <string name="tvMainDetails_LocationLongitude">Lon</string>
    <string name="tvMainDetails_Heartrate">HR</string>
    <string name="tvMainDetails_HeartrateCurrent">Curr</string>
    <string name="tvMainDetails_HeartrateMinimum">Min</string>
    <string name="tvMainDetails_HeartrateAverage">Avg</string>
    <string name="tvMainDetails_HeartrateMaximum">Max</string>
    <string name="tvMainDetails_Message">Msg</string>
    <string name="tvMainDetails_Emergency">SOS</string>
    <string name="txMainDetails_SendMessageNotSupportedByTransferProtocol">Send messages is not supported by selected transfer protocol (%1$s).</string>
    <string name="txMainDetails_SendEmergencySignalNotSupportedByTransferProtocol">Send SOS signals is not supported by selected transfer protocol (%1$s).</string>
    <string name="tiMsg">Send message</string>
    <string name="lbMsg_Message">Enter your message (maximum 80 chars)</string>
   	<string name="fdMsg_Message">Message</string>
   	<string name="txMsg_QuestionSendMessage">Do you really want to send the message?</string>
    <string name="txMsg_InfoSendMessageDone">Send message done!</string>
    <string name="txPrefs_Def_TrackName">My Track</string>
    <string name="lbPrefsServer_TransferProtocol">Transfer protocol</string>
    <string name="lbPrefsServer_ServerAddressAndPort">Server address (dns or ip) and port</string>
    <string name="lbPrefsServer_ServerPath">Server path (only for http protocols needed)</string>
    <string name="lbPrefsServer_TimeTriggerInSecs">Time trigger</string>
    <string name="lbPrefsServer_DistanceTriggerInMtr">Dist. trigger</string>
    <string name="lbPrefsServer_TriggerLogic">Trigger Logic</string>
    <string name="lbPrefsServer_CloseConnectionAfterEveryUpload">Close connection after every upload</string>
    <string name="lbPrefsServer_FinishEveryUploadWithALinefeed">Finish every upload with a linefeed</string>
	<string name="lbPrefsAccount_DeviceId">Device Id (IMEI)</string>
    <string name="lbPrefsAccount_Username">Username</string>
    <string name="lbPrefsAccount_Password">Password</string>
    <string name="lbPrefsAccount_TrackName">Trackname</string>
    <string name="lbPrefsAccount_PhoneNumber">Phone number</string>
    <string name="lbPrefsPinCodeQuery_Info">Please note: A recovery of a lost PIN is not possible. In such a case you must re-install and re-configure the app.</string>
    <string name="lbPrefsPinCodeQuery_Enable">Enable PIN code query</string>
    <string name="lbPrefsPinCodeQuery_PinCode">Enter new PIN code:</string>
    <string name="lbPrefsPinCodeQuery_PinCodeReenter">Reenter new PIN code:</string>
    <string name="lbPrefsRemoteAccess_Enable">Enable remote access</string>
    <string name="lbPrefsRemoteAccess_Password">Password</string>
    <string name="lbPrefsRemoteAccess_UseReceiver">Send response to specified receiver. If disabled responses will be send to command originator.</string>
    <string name="lbPrefsRemoteAccess_Receiver">Receiver</string>
    <string name="lbConnectToMyLiveTrackerPortal_Info">
    	Please note:
    	\n* Connecting to MyLiveTracker portal will override the server and account preferences.
    	\n* Connecting to MyLiveTracker portal requires a valid MyLiveTracker portal account. 
		An account can be applied at support@mylivetracker.de.
    </string>
	<string name="lbConnectToMyLiveTrackerPortal_PortalUsername">Portal username</string>
    <string name="lbConnectToMyLiveTrackerPortal_PortalPassword">Portal password</string>
    <string name="lbTrackExport_ExportTo">Export current track to...</string>
    <string name="btTrackExport_UploadToDropbox">Dropbox</string>
    <string name="btTrackExport_ExportToExternalStorage">External storage</string>
</resources>