<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical" 
    android:background="@color/colorBackground"
>
    <LinearLayout android:layout_height="4dip" android:layout_width="fill_parent" />            
    <TextView 
    	android:text="@string/lbPrefsServer_TransferProtocol"
    	android:layout_height="wrap_content" 
    	android:layout_width="wrap_content"     	
    />
    <Spinner
    	android:id="@+id/spPrefsServer_TransferProtocol"
    	android:layout_height="40dip" 
    	android:layout_width="fill_parent"
    	android:nextFocusDown="@+id/etPrefsServer_ServerAddress" 
    />
    <TextView
    	android:text="@string/lbPrefsServer_ServerAddressAndPort" 
    	android:layout_height="wrap_content" 
    	android:layout_width="wrap_content" 
    />
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent">
    	<EditText
    		android:id="@+id/etPrefsServer_ServerAddress"
    		android:text="" 
    		android:inputType="textUri"
    		android:layout_height="40dip"
    		android:layout_width="fill_parent" 
    		android:layout_weight="1"
    		android:nextFocusDown="@+id/etPrefsServer_ServerPort"
    	/>
		<EditText
			android:id="@+id/etPrefsServer_ServerPort"
			android:text=""
			android:inputType="number"
			android:layout_height="40dip"
			android:layout_width="fill_parent"
			android:layout_weight="2"
			android:nextFocusDown="@+id/etPrefsServer_ServerPath" 
		/>
    </LinearLayout>
    <TextView
    	android:text="@string/lbPrefsServer_ServerPath"
    	android:layout_height="wrap_content" 
    	android:layout_width="wrap_content" 
    />
    <EditText
    	android:id="@+id/etPrefsServer_ServerPath"
    	android:text=""
    	android:inputType="text"
    	android:layout_height="40dip" 
    	android:layout_width="fill_parent" 
    	android:nextFocusDown="@+id/etPrefsServer_TimeTriggerInSecs"
    />
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent">
    	<TextView
    		android:text="@string/lbPrefsServer_TimeTriggerInSecs"
    		android:layout_height="wrap_content"
    		android:layout_width="fill_parent" 
    		android:layout_weight="1" 
			android:gravity="center" 
		/>
    	<TextView
    		android:text="@string/lbPrefsServer_TriggerLogic"
    		android:layout_height="wrap_content"
    		android:layout_width="fill_parent" 
    		android:layout_weight="1" 
			android:gravity="center" 
		/>
    	<TextView
    		android:text="@string/lbPrefsServer_DistanceTriggerInMtr"
    		android:layout_height="wrap_content"
    		android:layout_width="fill_parent" 
    		android:layout_weight="1" 
    		android:gravity="center" 
    	/>    	
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent">
        <Spinner
	    	android:id="@+id/spPrefsServer_TimeTriggerInSecs"
	    	android:layout_height="40dip" 
	    	android:layout_width="fill_parent"
	    	android:layout_weight="1" 
	    	android:nextFocusDown="@+id/spPrefsServer_TriggerLogic" 
    	/>
        <Spinner
	    	android:id="@+id/spPrefsServer_TriggerLogic"
	    	android:layout_height="40dip" 
	    	android:layout_width="fill_parent"
	    	android:layout_weight="1" 
	    	android:nextFocusDown="@+id/spPrefsServer_DistanceTriggerInMtr" 
    	/>
        <Spinner
	    	android:id="@+id/spPrefsServer_DistanceTriggerInMtr"
	    	android:layout_height="40dip" 
	    	android:layout_width="fill_parent"
	    	android:layout_weight="1" 
	    	android:nextFocusDown="@+id/cbPrefsServer_CloseConnectionAfterEveryUpload" 
    	/>
    </LinearLayout>
    <CheckBox
    	android:id="@+id/cbPrefsServer_CloseConnectionAfterEveryUpload"
    	android:text="@string/lbPrefsServer_CloseConnectionAfterEveryUpload"
    	android:layout_height="40dip" 
    	android:layout_width="fill_parent"
    />
    <CheckBox
    	android:id="@+id/cbPrefsServer_FinishEveryUploadWithALinefeed"
    	android:text="@string/lbPrefsServer_FinishEveryUploadWithALinefeed"    	
    	android:layout_height="40dip" 
    	android:layout_width="fill_parent"
    />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent">        
        <Button
        	android:id="@+id/btPrefsServer_Save" 
        	android:text="@string/btSave"
        	android:layout_height="50dip"
        	android:layout_width="fill_parent"
        	android:layout_weight="1" 
			android:layout_gravity="bottom"
        />
        <Button
        	android:id="@+id/btPrefsServer_Cancel"
        	android:text="@string/btCancel"
        	android:layout_height="50dip" 
        	android:layout_width="fill_parent"         	
        	android:layout_weight="1" 
       	 	android:layout_gravity="bottom"
        />
    </LinearLayout>   
</LinearLayout>
