<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical" 
    android:background="@color/colorBackground"
>
    <LinearLayout 
        android:layout_height="10dip" 
        android:layout_width="fill_parent" 
    />       
    <TextView 
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:textSize="14dip"
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
        android:text="@string/lbPrefsPinCodeQuery_Info"
        android:textColor="@color/colorText" 
    />
    <LinearLayout 
        android:layout_height="10dip" 
        android:layout_width="fill_parent" 
    />
    <LinearLayout 
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent"
        android:paddingLeft="5dip"
       	android:paddingRight="5dip" 
    >
    	<CheckBox
		    android:id="@+id/cbPrefsPinCodeQuery_Enable"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/lbPrefsPinCodeQuery_Enable"
		    android:textColor="@color/colorText"
		    android:paddingLeft="42dip" 
		/>	
    </LinearLayout>
    <LinearLayout 
        android:layout_height="10dip" 
        android:layout_width="fill_parent" 
    />       
    <TextView
        android:paddingLeft="5dip"
        android:paddingRight="5dip" 
        android:textSize="16dip"
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
        android:text="@string/lbPrefsPinCodeQuery_PinCode"
        android:textColor="@color/colorText" 
    />
    <LinearLayout 
        android:layout_width="fill_parent" 
        android:layout_height="45dip"
        android:padding="5dip">

	    <EditText
	        android:id="@+id/etPrefsPinCodeQuery_PinCode"
	        android:layout_width="fill_parent"
	        android:layout_height="40dip"
	        android:inputType="number|text|textPassword"
	        android:singleLine="true"
	        android:text="" />

    </LinearLayout>
    <TextView 
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:textSize="16dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/lbPrefsPinCodeQuery_PinCodeReenter" 
        android:textColor="@color/colorText"
    />
    <LinearLayout 
        android:layout_width="fill_parent" 
        android:layout_height="45dip"
        android:padding="5dip">

	    <EditText
	        android:id="@+id/etPrefsPinCodeQuery_PinCodeReenter"
	        android:layout_width="fill_parent"
	        android:layout_height="40dip"
	        android:inputType="number|textPassword"
	        android:singleLine="true"
	        android:text="" />

    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent">
        <Button 
            android:layout_gravity="bottom" 
            android:layout_width="fill_parent" 
            android:layout_weight="1" 
            android:layout_height="50dip" 
            android:text="@string/btOk" 
            android:id="@+id/btPrefsPinCodeQuery_Ok" 
        />
        <Button 
            android:layout_width="fill_parent" 
            android:layout_gravity="bottom" 
            android:layout_weight="1" 
            android:layout_height="50dip" 
            android:text="@string/btCancel" 
            android:id="@+id/btPrefsPinCodeQuery_Cancel" 
        />
    </LinearLayout>   
</LinearLayout>
