<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical" 
    android:background="@color/colorBackground"
>
    <LinearLayout android:layout_height="4dip" android:layout_width="fill_parent" />        
    <TextView 
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:textSize="16dip"
        android:text="@string/lbPrefsAccount_DeviceId"
        android:textColor="@color/colorText"
       	android:layout_height="wrap_content" 
       	android:layout_width="wrap_content" 
    />
	<LinearLayout 
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
    >    
	    <EditText 
	        android:id="@+id/etPrefsAccount_DeviceId"
	        android:text=""
	        android:inputType="none"
	        android:layout_height="40dip"
	        android:layout_width="fill_parent" 
	    />
    </LinearLayout>
    <TextView
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:textSize="16dip"
        android:text="@string/lbPrefsAccount_Username" 
        android:textColor="@color/colorText"
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
    />
	<LinearLayout 
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
    >    
	    <EditText 
	        android:id="@+id/etPrefsAccount_Username" 
	        android:text=""
	        android:inputType="text"
	        android:layout_height="40dip" 
	        android:layout_width="fill_parent" 
	    />
    </LinearLayout>
    <TextView
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:textSize="16dip"
        android:text="@string/lbPrefsAccount_Password"
        android:textColor="@color/colorText"
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
    />
	<LinearLayout 
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
    >    
	    <EditText 
	        android:id="@+id/etPrefsAccount_Password" 
	        android:text=""
	        android:inputType="textPassword"
	        android:layout_height="40dip"
	        android:layout_width="fill_parent" 
	    />
    </LinearLayout>
    <TextView 
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:textSize="16dip"
        android:text="@string/lbPrefsAccount_TrackName"
        android:textColor="@color/colorText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" 
    />
	<LinearLayout 
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
    >    
	    <EditText 
	        android:id="@+id/etPrefsAccount_TrackName"
	        android:text=""
	        android:layout_height="40dip"
	        android:layout_width="fill_parent"  
	    />
	</LinearLayout>    
    <TextView
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:textSize="16dip"
    	android:text="@string/lbPrefsAccount_PhoneNumber" 
    	android:textColor="@color/colorText"
    	android:layout_height="wrap_content" 
    	android:layout_width="wrap_content" 
    />
	<LinearLayout 
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
    >    
		<EditText 
			android:id="@+id/etPrefsAccount_PhoneNumber"
			android:text=""
			android:inputType="phone"
			android:layout_height="40dip" 
			android:layout_width="fill_parent" 
		/>
	</LinearLayout>	
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button android:layout_gravity="bottom" android:layout_width="fill_parent" android:layout_weight="1" android:layout_height="50dip" android:text="@string/btSave" android:id="@+id/btPrefsAccount_Save"></Button>
        <Button android:layout_width="fill_parent" android:layout_gravity="bottom" android:layout_weight="1" android:layout_height="50dip" android:text="@string/btCancel" android:id="@+id/btPrefsAccount_Cancel"></Button>
    </LinearLayout>   
</LinearLayout>
