<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical" 
    android:background="@color/colorBackground"
>
    <LinearLayout android:layout_height="4dip" android:layout_width="fill_parent" >
    </LinearLayout>        
    
	<LinearLayout 
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
    >    
	    <CheckBox
            android:id="@+id/cbPrefsRemoteAccess_Enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbPrefsRemoteAccess_Enable" 
        />
    </LinearLayout>
    <LinearLayout android:layout_height="10dip" android:layout_width="fill_parent" />
    <TextView
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:textSize="16dip"
        android:text="@string/lbPrefsRemoteAccess_Password"
        android:textColor="@color/colorText"
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
    />
	<LinearLayout 
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
    >    
	    <EditText
	        android:id="@+id/etPrefsRemoteAccess_Password"
	        android:layout_width="fill_parent"
	        android:layout_height="40dip"
	        android:inputType="textPassword"
	        android:singleLine="true"
	        android:text="" />
    </LinearLayout>
    <LinearLayout android:layout_height="10dip" android:layout_width="fill_parent" />
    <LinearLayout 
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
    >    
	    <CheckBox
            android:id="@+id/cbPrefsRemoteAccess_UseReceiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbPrefsRemoteAccess_UseReceiver" 
        />
    </LinearLayout>
    <LinearLayout android:layout_height="5dip" android:layout_width="fill_parent" />
    <TextView
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:textSize="16dip"
        android:text="@string/lbPrefsRemoteAccess_Receiver" 
        android:textColor="@color/colorText"
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
    />
	<LinearLayout 
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
    >    

	    <EditText
	        android:id="@+id/etPrefsRemoteAccess_Receiver"
	        android:layout_width="fill_parent"
	        android:layout_height="40dip"
	        android:inputType="phone"
	        android:singleLine="true"
	        android:text="" />

    </LinearLayout>
    <LinearLayout android:layout_height="fill_parent" android:layout_width="fill_parent" >
        <Button
        	android:id="@+id/btPrefsRemoteAccess_Save"
        	android:text="@string/btSave"  
        	android:layout_gravity="bottom" 
        	android:layout_weight="1"
        	android:layout_height="50dip" 
        	android:layout_width="fill_parent"         	 
        />
        <Button
        	android:id="@+id/btPrefsRemoteAccess_Cancel"
        	android:text="@string/btCancel"
        	android:layout_gravity="bottom" 
        	android:layout_weight="1" 
        	android:layout_height="50dip" 
        	android:layout_width="fill_parent" 
        />
    </LinearLayout>   
</LinearLayout>
