<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical" 
    android:background="@color/colorBackground"
>
    <LinearLayout 
        android:layout_height="10dip" 
        android:layout_width="fill_parent" 
    />       
    <TextView 
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:textSize="14dip"
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
        android:text="@string/lbConnectToMyLiveTrackerPortal_Info"
        android:textColor="@color/colorText" 
    />
    <LinearLayout
        android:layout_height="10dip" 
        android:layout_width="fill_parent" 
    />       
    <TextView
        android:paddingLeft="5dip"
        android:paddingRight="5dip" 
        android:textSize="16dip"
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
        android:text="@string/lbConnectToMyLiveTrackerPortal_PortalUsername"
        android:textColor="@color/colorText" 
    />
    <LinearLayout 
        android:layout_width="fill_parent" 
        android:layout_height="45dip"
        android:padding="5dip">
	    <EditText 
	        android:layout_width="fill_parent" 
	        android:layout_height="40dip" 
	        android:text="" 
	        android:id="@+id/etConnectToMyLiveTrackerPortal_PortalUsername" 
	        android:inputType="text" 
	    />
    </LinearLayout>
    <TextView 
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:textSize="16dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/lbConnectToMyLiveTrackerPortal_PortalPassword" 
        android:textColor="@color/colorText"
    />
    <LinearLayout 
        android:layout_width="fill_parent" 
        android:layout_height="45dip"
        android:padding="5dip">
	    <EditText 
	        android:layout_width="fill_parent" 
	        android:text="" 
	        android:layout_height="40dip" 
	        android:id="@+id/etConnectToMyLiveTrackerPortal_PortalPassword" 
	        android:inputType="textPassword" 
	    />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent">
        <Button 
            android:layout_gravity="bottom" 
            android:layout_width="fill_parent" 
            android:layout_weight="1" 
            android:layout_height="50dip" 
            android:text="@string/btOk" 
            android:id="@+id/btConnectToMyLiveTrackerPortal_Ok" 
        />
        <Button 
            android:layout_width="fill_parent" 
            android:layout_gravity="bottom" 
            android:layout_weight="1" 
            android:layout_height="50dip" 
            android:text="@string/btCancel" 
            android:id="@+id/btConnectToMyLiveTrackerPortal_Cancel" 
        />
    </LinearLayout>   
</LinearLayout>
