<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical" 
    android:background="@color/colorBackground"
>
    <TextView
        android:paddingTop="4dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:textSize="16sp"
        android:text="@string/lbTrackExport_ExportTo"
        android:textColor="@color/colorText" 
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
    />
    <LinearLayout
        android:paddingTop="5dip" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
    	<Button 
    		android:id="@+id/btTrackExport_UploadToDropbox"
    		android:text="@string/btTrackExport_UploadToDropbox"
    		android:layout_gravity="bottom"
    		android:layout_weight="1"     		 
    		android:layout_height="wrap_content"
    		android:layout_width="fill_parent"     		     		 
    	/>  
    	<Button 
    		android:id="@+id/btTrackExport_ExportToExternalStorage"
    		android:text="@string/btTrackExport_ExportToExternalStorage"
    		android:layout_gravity="bottom"
    		android:layout_weight="1"     		 
    		android:layout_height="wrap_content"
    		android:layout_width="fill_parent"     		     		 
    	/>    	        
   </LinearLayout>
   <LinearLayout
        android:paddingTop="20dip" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
    	<Button 
    		android:id="@+id/btTrackExport_FilenamePrefs"
    		android:text="@string/btTrackExport_FilenamePrefs"
    		android:layout_gravity="bottom"
    		android:layout_weight="1"     		 
    		android:layout_height="wrap_content"
    		android:layout_width="0dip"     		     		 
    	/>  
   </LinearLayout>
   <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent">        
        <Button
        	android:id="@+id/btTrackExport_Back" 
        	android:text="@string/btBack"
        	android:layout_height="50dip"
        	android:layout_width="0dip"
        	android:layout_weight="1" 
			android:layout_gravity="bottom"
        />
    </LinearLayout>  
</LinearLayout> 
